# ytd

./: .gitignore  README.md  config.example.yaml  pyproject.toml  urls.local.txt
docs/: DEVELOPMENT.md  devplan.md  devplan_ru.md  manual.md  usage.md
docs/gaps/: doublesave_antibot_issue.md  intravideo_pause_todo.md
tests/: test_cli.py  test_config.py  test_downloader.py  test_history_cli.py  test_history_import.py  test_integration.py  test_logging.py  test_types.py  test_utils.py
ytd/: __init__.py  cli.py  config.py  downloader.py  exceptions.py  interactive.py  logging.py  pause.py  types.py  utils.py
ytd/history/: __init__.py  storage.py
