[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "ytd"
version = "0.1.0"
description = "Простой CLI-загрузчик видео с поддержкой площадок yt-dlp (YouTube, VK и др.)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ivan" }
]
license = { text = "MIT" }
keywords = ["youtube", "downloader", "yt-dlp", "cli", "video", "audio"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
]

# Основные зависимости рантайма
dependencies = [
  "yt-dlp",
  "typer>=0.20.0",
  "rich>=13",
  "PyYAML>=6",
]

[project.scripts]
# Консольная команда `ytd`
ytd = "ytd.cli:main"

[project.urls]
Homepage = "https://github.com/kogriv/ytd"
